--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,20 +4,21 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "jax_fno"
-version = "0.2.0"
+version = "0.3.0"
 description = "JAX implementation of Fourier Neural Operators for solving PDEs"
 authors = ["christianfenton"]
 readme = "README.md"
 packages = [{include = "jax_fno", from = "src"}]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.12"
 jax = ">=0.4.0"
 jaxlib = ">=0.4.0"
 flax = ">=0.8.0"
 optax = ">=0.1.0"
 numpy = ">=1.20.0"
 matplotlib = ">=3.5.0"
+ipykernel = "^7.1.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=7.0.0"
