--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "jax_fno"
-version = "0.4.0"
+version = "0.4.1"
 description = "JAX implementation of Fourier Neural Operators for solving PDEs"
 authors = ["christianfenton"]
 readme = "README.md"
@@ -17,8 +17,6 @@ jaxlib = ">=0.4.0"
 flax = ">=0.8.0"
 optax = ">=0.1.0"
 numpy = ">=1.20.0"
-matplotlib = ">=3.5.0"
-ipykernel = "^7.1.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=7.0.0"
@@ -30,7 +28,6 @@ mypy = ">=1.0.0"
 
 [tool.poetry.group.notebooks.dependencies]
 jupyter = ">=1.0.0"
-ipykernel = ">=6.0.0"
 seaborn = ">=0.11.0"
 scipy = ">=1.9.0"
 
@@ -38,6 +35,16 @@ scipy = ">=1.9.0"
 sphinx = ">=5.0.0"
 sphinx-rtd-theme = ">=1.0.0"
 myst-parser = ">=0.18.0"
+mkdocs = "^1.6.1"
+mkdocs-material = "^9.7.0"
+mkdocstrings = "^0.30.1"
+mkdocstrings-python = "^1.19.0"
+pymdown-extensions = "^10.17.1"
+
+
+[tool.poetry.group.tutorials.dependencies]
+matplotlib = "^3.10.7"
+ipykernel = "^7.1.0"
 
 [tool.black]
 line-length = 88
