--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -17,15 +17,15 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: 3.12
-      - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV 
+      - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV
       - uses: actions/cache@v4
         with:
           key: mkdocs-material-${{ env.cache_id }}
-          path: ~/.cache 
+          path: ~/.cache
           restore-keys: |
             mkdocs-material-
-      - run: pip install \
-          mkdocs-material \ 
-          mkdocstrings-python \ 
-          pymdown-extensions
+      - name: Install dependencies
+        run: |
+          pip install mkdocs-material mkdocstrings-python
+          pip install -e .
       - run: mkdocs gh-deploy --force
