--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ jaxlib = ">=0.4.0"
 flax = ">=0.8.0"
 optax = ">=0.1.0"
 numpy = ">=1.20.0"
+mkdocs-autorefs = "^1.4.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=7.0.0"
