--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,13 +11,12 @@ readme = "README.md"
 packages = [{include = "jax_fno", from = "src"}]
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = ">=3.12"
 jax = ">=0.4.0"
 jaxlib = ">=0.4.0"
 flax = ">=0.8.0"
 optax = ">=0.1.0"
 numpy = ">=1.20.0"
-mkdocs-autorefs = "^1.4.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=7.0.0"
@@ -26,6 +25,7 @@ black = ">=23.0.0"
 isort = ">=5.0.0"
 flake8 = ">=6.0.0"
 mypy = ">=1.0.0"
+h5py = "^3.15.1"
 
 [tool.poetry.group.notebooks.dependencies]
 jupyter = ">=1.0.0"
@@ -42,6 +42,7 @@ mkdocs = "^1.6.1"
 mkdocs-material = "^9.7.0"
 mkdocstrings = "^0.30.1"
 mkdocstrings-python = "^1.19.0"
+mkdocs-autorefs = "^1.4.3"
 pymdown-extensions = "^10.17.1"
 
 [tool.black]
